deploy/policies/istio.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: service-lab-peer
  namespace: service-lab
spec:
  selector:
    matchLabels:
      app: service-lab
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: service-lab-http
  namespace: service-lab
spec:
  selector:
    matchLabels:
      app: service-lab
  action: ALLOW
  rules:
  - to:
    - operation:
        methods:
        - GET
        paths:
        - /health
        - /metrics
  - to:
    - operation:
        methods:
        - POST
        paths:
        - /
    when:
    - key: request.headers[test]
      values:
      - Hello
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: service-lab-egress
  namespace: service-lab
spec:
  workloadSelector:
    labels:
      app: service-lab
  egress:
  - hosts:
    - ./*
    - istio-system/*
    - kube-system/kube-dns.kube-system.svc.cluster.local
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
